--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://terencesmithcodes.github.io/atlhomebuyers",
+  "homepage": "https://atlcapitalventures.com",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
