updated cname and homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://atlcapitalventures.com",
+  "homepage": "http://atlcapitalventures.com",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
