Updated form and hrefs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://atlcapitalventures.com",
-  "name": "frontend",
+  "name": "atlhomebuyers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
